--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,9 @@
         "symfony/dom-crawler": "^7.0",
         "guzzlehttp/guzzle": "^7.8",
         "symfony/css-selector": "^7.0"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.48",
+        "phpmd/phpmd": "^2.15"
     }
 }
