--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ dnspython==2.5.0
 h11==0.14.0
 idna==3.4
 iniconfig==2.0.0
+Jinja2==3.1.3
 jmespath==1.0.1
+MarkupSafe==2.1.4
 outcome==1.3.0.post0
 packaging==23.2
 pathspec==0.10.1
