--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "format": "prettier -w src/*.{ts,vue} && prettier -w src/**/*.{ts,vue}",
+    "fix": "yarn format && yarn lint"
   },
   "dependencies": {
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "prettier": "^3.2.5",
     "vue": "^3.4.15"
   },
   "devDependencies": {
